cabal-version:      2.4
name:               delim-cont
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             thunderseethe
maintainer:         thunderseethe.dev@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  build-depends: 
    , base ^>=4.14.3.0
    , mtl ^>=2.2.2
  hs-source-dirs: src
  exposed-modules: Lib
  other-modules: Prompt Seq CC.Func CC.Frame
  default-language: Haskell2010

executable delim-cont
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      , base ^>=4.14.3.0
      , delim-cont ^>=0.1.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
