cabal-version:      2.4
name:               delim-cont
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             thunderseethe
maintainer:         thunderseethe.dev@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules:
        Seq
        Sema
        Lib
        Parser
        Prompt
        CC.Frame
        CC.Func
        CC.Control
        CC.CPS

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions: GADTs RankNTypes TypeOperators LambdaCase InstanceSigs
    build-depends:    
        base ^>=4.14.2.0
        ,hashable ^>= 1.3.0.0
        ,megaparsec ^>= 9.0.1
        ,mtl ^>= 2.2.2
        ,parser-combinators ^>= 1.2.1
        ,recursion-schemes ^>= 5.2.2.2
        ,text ^>= 1.2.4.1
        ,unordered-containers ^>= 0.2.14.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable delim-cont
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-extensions: GADTs RankNTypes TypeOperators LambdaCase InstanceSigs
    build-depends:    base ^>=4.14.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
