cabal-version:      2.4
name:               delim-cont
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             thunderseethe
maintainer:         thunderseethe.dev@gmail.com
build-type:         Simple

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules:
        Interp.Direct
        AST
        Seq
        Lib
        Prompt
        Parser
        Parsing
        Ty
        CC.Frame
        CC.Func
        CC.Control
        CC.CPS
        Interp.CBV
        Text.Trifecta.Indentation

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions: GADTs RankNTypes TypeOperators LambdaCase InstanceSigs TemplateHaskell
    build-depends:    
        base ^>=4.14.2.0
        ,composition ^>= 1.0.2.2
        ,hashable ^>= 1.3.0.0
        ,megaparsec ^>= 9.0.1
        ,parsers ^>= 0.12.10
        ,prettyprinter ^>= 1.7.1
        ,prettyprinter-ansi-terminal ^>= 1.1.3
        ,recursion-schemes ^>=5.2.2.1
        ,text ^>= 1.2.4.1
        ,transformers ^>=0.5.6.2
        ,trifecta ^>= 2.2.2
        ,unordered-containers ^>= 0.2.14.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    default-language: Haskell2010
    build-depends: base, delim-cont, HTF, text, trifecta, heredoc

executable delim-cont
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-extensions: GADTs RankNTypes TypeOperators LambdaCase InstanceSigs
    build-depends:    base ^>=4.14.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
